<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:scrollbars="none"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_head"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/item_head"

            />
        <TextView
            android:id="@+id/item_brow"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/item_brow"

            />
        <TextView
            android:id="@+id/item_eye"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/item_eye"

            />

        <TextView
            android:id="@+id/item_nose"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/item_nose"

            />
        <TextView
            android:id="@+id/item_mouth"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/item_mouth"

            />
        <TextView
            android:id="@+id/item_other"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/item_other"

            />
        <TextView

            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/item_other"

            />
    </LinearLayout>

</HorizontalScrollView>
