<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_ll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_ll_select"
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/main_body_ll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_text_view_head"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white"

                android:text="@string/main_text_head" />

            <TextView
                android:id="@+id/main_text_view_up"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"

                android:text="@string/main_text_up" />

            <TextView
                android:id="@+id/main_text_view_down"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"

                android:text="@string/main_text_down" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/picture_ll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <include layout="@layout/item_head"/>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"

            >

            <include layout="@layout/item_head_layout" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
